--- a/notebooks/01. Dataset properties.ipynb
+++ b/notebooks/01. Dataset properties.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "69fc0f36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cas/local/conda/envs/mood_v2/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import seaborn as sns\n",
     "import pandas as pd\n",
