--- a/notebooks/06. Split protocol visualization grid.ipynb
+++ b/notebooks/06. Split protocol visualization grid.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "e0a864db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cas/local/conda/envs/mood_v2/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.environ[\"LOGURU_LEVEL\"] = \"INFO\"\n",
@@ -83,7 +92,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 264/264 [01:16<00:00,  3.43it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 264/264 [01:04<00:00,  4.09it/s]\n"
      ]
     }
    ],
